# design-system

./: .gitignore  .mcp.json  CLAUDE.md  MODE.md  PROMPT.md  SESSION-LOG.md  open-issues.md  pyproject.toml
.claude/: settings.json
engine-feedback/: INDEX.md
open-issues/: OI-002.md  OI-004.md  OI-005.md  OI-006.md  OI-007.md  OI-008.md  OI-009.md  OI-011.md  OI-012.md  OI-013.md  OI-014.md  OI-015.md  OI-016.md  OI-018.md  OI-019.md  OI-079-001.md  OI-080-001.md  OI-081-001.md  OI-083-001-coding-review-substrate-enforcement.md  OI-083-001.md  OI-083-002-coding-review-severity-taxonomy.md  OI-083-002.md  OI-085-001.md  OI-085-002-structural-markdown-restriction.md  OI-085-002.md  OI-086-001-spec-clause-source-decision-not-null.md  OI-086-001.md  OI-086-002-single-active-spec-version-per-spec-id.md  OI-086-002.md  OI-086-003-cited-object-id-not-null-on-cite-required-bases.md  OI-086-003.md  OI-086-004-legacy-imports-decomposition-status-semantics.md  OI-086-004.md  OI-S081-1.md  OI-S081-2.md  OI-S081-3.md  OI-S081-4.md  OI-S081-5.md  OI-S081-6.md  OI-S081-7.md  (+41 more)
prompts/: application.md  development.md
provenance/: legacy-substrate-summary.md
selvedge/: __init__.py  aliases.py  cli.py  clone_cmd.py  connection.py  context_cmd.py  errors.py  feedback_cmd.py  id_allocate.py  init_cmd.py  migrations.py  monitor_external.py  orient.py  paths.py  precheck.py  query.py  recover.py  restore_cmd.py  schema.py  snapshots.py  submit_help.py  subtract.py  validate.py
specifications/: _versions.md  aliases.yaml  constraints.md  engine-manifest.md  identity-v1.md  identity.md  (+27 more)
(+1797 files in other folders)
