[project]
name = "selvedge"
version = "0.1.0"
description = "Selvedge substrate CLI (engine-v17)."
requires-python = ">=3.11"

[project.scripts]
selvedge = "selvedge.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "coverage[toml]>=7.6"]

[tool.pytest.ini_options]
testpaths = ["state/tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.coverage.run]
source = ["selvedge"]
branch = true
parallel = true
# Subprocess coverage: CLI tests shell out via bin/selvedge; conftest.py wires
# COVERAGE_PROCESS_START + a sitecustomize shim so child interpreters call
# coverage.process_startup() and contribute to the report.

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
